Added new test classes, new tests, bug reports